# detect_cpp_features_standard_versions

./: .gitmodules  CMakeLists.txt
src/: main.cpp
